<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDetails"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTitleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_10sdp"
        tools:text="Name" />

    <TextView
        android:id="@+id/tvTitleFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/file_path"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_10sdp"
        tools:text="File Path" />

    <TextView
        android:id="@+id/tvTitleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/size_"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_10sdp"
        tools:text="size" />

    <TextView
        android:id="@+id/tvTitlePermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPermission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_write"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tvTitleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/date_"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_10sdp"
        tools:text="Date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDetailOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_button"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>