<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llRename"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_15sdp"
    android:background="@drawable/bg_white"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/file_name"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_name"
        android:maxLength="100"
        android:singleLine="true"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRenameCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_button_unselected"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:chainUseRtl="true"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnRenameCancel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>